--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@types/react-native-global-props": "^1.1.1",
     "expo": "^44.0.6",
     "expo-app-loading": "^1.3.0",
     "expo-font": "^10.0.5",
